# AIDD-logic-metier-workflow

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.business-logic/: config.json  index.md
.business-logic/workflows/: cli-initialization.md  workflow-manager.md
.claude/: settings.local.json
.claude/commands/: buslog.md  write-plan.md.txt
.claude/skills/brainstorming/: SKILL.MD.txt
.claude/skills/writing-plans/: SKILL.MD.txt
buslog/: README.md  __init__.py  cli.py
buslog/core/: __init__.py  analyzer.py  prompt_generator.py  workflow_manager.py
buslog/templates/: config.json  index.md  workflow.md
buslog/web/: __init__.py  server.py
buslog/web/static/: script.js  style.css
buslog/web/templates/: index.html  workflow.html
